<resources>
    <string name="app_name">ChatMingle</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone_number">Sign up with Phone Number</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_phone_number">Sign In with Phone Number</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New BroadCast</string>
    <string name="linked_devices">Linked Devices</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="settings">Settings</string>
    <string name="logout">LogOut</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="_5_30_pm">5:30 PM</string>
    <string name="hi_how_are_you">Last Message</string>
    <string name="todo1">TODO</string>
    <string name="user_name1">User Name</string>
    <string name="view_contact">View contact</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="search">Search</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="type_your_message">Type your message</string>
    <string name="todo2">TODO</string>
    <string name="message_text">Message text</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="message1">Message</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="no_message">No message</string>
    <string name="todo23">TODO</string>
    <string name="todo122">TODO</string>
    <string name="todo22">TODO</string>
    <string name="user_name2">User Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="about_me">About me</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
</resources>