<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/logobg"
    android:gravity="center"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessLeaf,UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/chatmingle"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/textEmailsignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bgfortextfields"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/arrowbody"
            android:textColorHint="@color/silver"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/textPasswordsignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgfortextfields"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/arrowbody"
            android:textColorHint="@color/silver"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/DonthaveAccountSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/darkgray"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/innerbody"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/google"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,RtlHardcoded,VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/squarebgcolor"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/textSigninPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in_with_phone_number"
        android:textColor="@color/darkgray"
        android:textSize="17sp" />

</LinearLayout>