<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/toolbarlayout"
        android:id="@+id/toolbar"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/arrowbody"
        app:tabIndicatorColor="@color/roundborderlayer"
        app:tabIndicatorFullWidth="true"
        app:tabSelectedTextColor="@color/roundborderlayer"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calls" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagermain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkgray" />

</LinearLayout>