<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/toolbarchatting"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@color/arrowbody"
    android:minHeight="?attr/actionBarSize"
    app:titleTextColor="@color/white"
    android:theme="@style/Theme.Material3.DayNight"
    app:popupTheme="@style/ThemeOverlay.MyPopupTheme"
    >
    <ImageView
        android:id="@+id/chattingBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo1"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/arrowleft"
        android:tint="@color/white"
        tools:ignore="RtlHardcoded,UseAppTint" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilepicChatting"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/useravatar"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="ImageContrastCheck,RtlHardcoded" />

        <TextView
            android:id="@+id/userNameChatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/user_name1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/profilepicChatting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/phoneChatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:contentDescription="@string/todo"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/videoChatting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/phonecallsicon"
            tools:ignore="RtlHardcoded,UseAppTint" />

        <ImageView
            android:id="@+id/videoChatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/videocalls"
            tools:ignore="RtlHardcoded,UseAppTint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.Toolbar>